updated lua vm ticking system, large computer now matches the IPS of a Zilog 80